<resources>
    <string name="app_name">Travel Interest</string>
    <string name="location_prompt">Choose a location</string>
    <string-array name="location_array">
        <item>Bali</item>
        <item>Surabaya</item>
        <item>Malang</item>
        <item>Medan</item>
        <item>Makassar</item>
        <item>Manado</item>
    </string-array>
    <string name="title_activity_tour_create_package">TourCreatePackage</string>
    <string name="facebook_app_id">534717363703723</string>
    <string name="fb_login_protocol_scheme">fb534717363703723</string>
    <string name="cityDetail_Detail">
        Bali is an Indonesian island known for its forested volcanic mountains, iconic rice paddies, beaches and coral reefs. The island is home to religious sites such as cliffside Uluwatu Temple.
        \n\n
        To the south, the beachside city of Kuta has lively bars, while Seminyak, Sanur and Nusa Dua are popular resort towns. The island is also known for its yoga and meditation retreats.
        \n\n
        Bali is an Indonesian island known for its forested volcanic mountains, iconic rice paddies, beaches and coral reefs. The island is home to religious sites such as cliffside Uluwatu Temple. To the south, the beachside city of Kuta has lively bars, while Seminyak, Sanur and Nusa Dua are popular resort towns. The island is also known for its yoga and meditation retreats.
    </string>
    <string name="profile_edit_profile_label">Account Profile</string>
    <string name="profile_tour_profile_label">Tour Profile</string>
    <string name="profile_list_package_label">List Package</string>
    <string name="profile_history_purchasing_label">History Purchasing</string>
    <string name="profile_history_transaction_label">History Sales</string>
    <string name="profile_language_label">Language</string>
    <string name="manifest_tour_list_title">List Tour Packages</string>
    <string name="tour_edit_title">Tour Profile</string>
    <string name="image_label">Image</string>
    <string name="adult_label">Adult</string>
    <string name="child_label">Child</string>
    <string name="infant_label">Infant</string>
    <string name="title_label">Title</string>
    <string name="name_label">Name</string>
    <string name="id_label">No. ID</string>
    <string name="passport_label">No. Passport</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="retype_password_label">Retype Password</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="phone_label">Phone</string>
    <string name="location_label">Location</string>
    <string name="trip_label">Trip</string>
    <string name="date_label">Date</string>
    <string name="baggage_label">Baggage</string>
    <string name="guest_label">Guest</string>
    <string name="room_label">Room</string>
    <string name="roundtrip_label">Round trip</string>
    <string name="participant_label">Participant</string>
    <string name="total_price_label">Total Price</string>
    <string name="save_label">Save Changes</string>
    <string name="cancel_label">Cancel</string>
    <string name="submit_label">Submit</string>
    <string name="login_label">Login</string>
    <string name="signup_label">Sign Up</string>
    <string name="next_label">Next</string>
    <string name="facebook_label">Facebook</string>
    <string name="find_ticket_label">Find Ticket</string>
    <string name="find_tour_label">Find Tour</string>
    <string name="find_room_label">Find Room</string>
    <string name="sort_label">Sort</string>
    <string name="filter_label">Filter</string>
    <string name="day_label">Day</string>
    <string name="night_label">Night</string>
    <string name="flight_label">Flight</string>
    <string name="train_label">Train</string>
    <string name="hotel_label">Hotel</string>
    <string name="entertainment_label">Entertainment</string>
    <string name="wifi_label">Wi-Fi</string>
    <string name="car_rental_label">Car Rental</string>
    <string name="no_data_label">No Data Found</string>
    <string name="facilities_label">Facilities</string>
    <string name="description_label">Description</string>
    <string name="view_more_label">View More</string>
    <string name="view_less_label">View Less</string>
    <string name="near_location_label">Nearest Popular Location</string>
    <string name="keyword_label">Keyword</string>
    <string name="package_label">Package</string>
    <string name="upload_photo_label">Upload Photo</string>
    <string name="managed_by_label">Managed By</string>
    <string name="travel_packet_label">Travel Packet Name</string>
    <string name="price_label">Price</string>
    <string name="detail_label">Detail</string>
    <string name="change_language_label">Change Language</string>
    <string name="check_in_label">Check-In</string>
    <string name="check_out_label">Check-Out</string>
    <string name="user_not_logged_in_label">User not logged in</string>
    <string name="error_name_label">Name is empty</string>
    <string name="error_price_label">Price is empty</string>
    <string name="error_image_label">Image is empty</string>
    <string name="error_phone_label">Phone is empty</string>
    <string name="error_password_label">Password is empty</string>
    <string name="error_data_label">data is empty</string>
    <string name="yes_label">YES</string>
    <string name="transaction_timeout_label">Please complete your transaction within 1 hour</string>
    <string name="tour_create_add_keyword_label">Press enter to add new keyword</string>
    <string name="tour_create_error_photo_label">Photo tour is empty</string>
    <string name="tour_create_error_start_date_label">Start Date is empty</string>
    <string name="tour_create_error_end_date_label">End Date is empty</string>
    <string name="tour_create_error_description_label">Description is empty</string>
    <string name="tour_create_error_location_label">Location is empty</string>
    <string name="tour_create_error_tour_facilities_label">Tour Facilities is empty</string>
    <string name="tour_create_error_tour_package_label">Tour Package is empty</string>
    <string name="menu_home">Home</string>
    <string name="menu_tour">Tour</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_profile">Profile</string>
    <string name="captcha_title">Please enter this CAPTCHA</string>
    <string name="tour_edit_save_title">Saving your tour profile...</string>
    <string name="confirmation_room_label">Room</string>
    <string name="confirmation_day_label">Day</string>
    <string name="confirmation_flight_depart_title">Depart ticket use</string>
    <string name="confirmation_flight_return_title">Return ticket use</string>
    <string name="confirmation_flight_fill_guest_label">Fill Guest Data</string>
    <string name="confirmation_flight_fill_adult_label">Fill Adult Data</string>
    <string name="confirmation_flight_fill_child_label">Fill Child Data</string>
    <string name="confirmation_flight_fill_infant_label">Fill Infant Data</string>
    <string name="confirmation_flight_detail_title">Flight Detail</string>
    <string name="confirmation_hotel_detail_title">Hotel Detail</string>
    <string name="confirmation_train_detail_title">Train Detail</string>
    <string name="confirmation_requester_title">Contact Details</string>
    <string name="confirmation_guest_title">Guest Data</string>
    <string name="confirmation_passenger_title">Passenger Data</string>
    <string name="confirmation_special_request_title">Special Requests</string>
    <string name="confirmation_special_request_add_label">Add Special Requests</string>
    <string name="confirmation_bed_type_title">Bed Type</string>
    <string name="confirmation_bed_type_add_label">Add Bed Type</string>
    <string name="confirmation_special_request_list_1_label">Free Smoke Room</string>
    <string name="confirmation_special_request_list_2_label">Late Check-In</string>
    <string name="confirmation_special_request_list_3_label">Early Check-In</string>
    <string name="confirmation_special_request_list_4_label">Extra Bed</string>
    <string name="confirmation_special_request_list_5_label">Top Stories Room</string>
    <string name="confirmation_price_detail_title">Price Details</string>
    <string name="confirmation_return_label">Return</string>
    <string name="confirmation_one_way_label">One Way</string>
    <string name="confirmation_subtotal_label">Subtotal</string>
    <string name="confirmation_baggage_depart_label">Baggage Depart</string>
    <string name="confirmation_baggage_return_label">Baggage Return</string>
    <string name="confirmation_total_label">Total</string>
    <string name="confirmation_tax_label">Tax</string>
    <string name="confirmation_booking_progress_label">Booking is in progress</string>
    <string name="confirmation_booking_failed_label">Booking is failed</string>
    <string name="confirmation_error_requester_phone_label">Please enter phone number</string>
    <string name="confirmation_error_not_logged_in_label">Please Login to Fill Contact Details</string>
    <string name="notification_no_tour_label">No Tour Found</string>
    <string name="notification_booked_label">Booked</string>
    <string name="notification_detail_booking_no_label">Booking Number</string>
    <string name="notification_detail_booking_at_label">Booking Date</string>
    <string name="notification_detail_booking_price_label">Booking Total Price</string>
    <string name="notification_detail_e_ticket_label">E-ticket</string>
    <string name="notification_detail_order_processed_label">Booking is processed</string>
    <string name="notification_detail_order_ticketed_label">Booking is ticketed</string>
    <string name="notification_detail_order_hold_label">Booking is hold</string>
    <string name="notification_detail_order_time_out_label">Booking is time out</string>
    <string name="notification_detail_order_time_limit_label">Booking is time limit</string>
    <string name="notification_detail_order_unpaid_label">Booking is unpaid</string>
    <string name="notification_detail_order_accept_label">Booking is accept</string>
    <string name="notification_detail_order_cancel_label">Booking is canceled</string>
    <string-array name="status_sales">
        <item>Hold</item>
        <item>Processed</item>
        <item>Ticketed</item>
        <item>Time Out</item>
        <item>Time Limit</item>
        <item>Unpaid</item>
        <item>Accept</item>
        <item>Cancel</item>
    </string-array>
    <string name="e_ticket_booking_code_label">Booking Code</string>
    <string name="e_ticket_subtitle_label">Show this code on check-in</string>
    <string name="e_ticket_flight_detail_label">Flight Detail</string>
    <string name="e_ticket_passenger_detail_label">Passenger Detail</string>
    <string name="e_ticket_travel_advice_label">Travel Advice</string>
    <string name="e_ticket_stay_advice_label">Stay Advice</string>
    <string name="e_ticket_breakfast_include_label">Breakfast Include</string>
    <string name="tour_create_create_tour_label">Create Tour Package</string>
    <string name="tour_create_list_package_label">List Package</string>
    <string name="media_title">Choose Media</string>
    <string name="media_camera_title">From Camera</string>
    <string name="media_gallery_title">From Gallery</string>
    <string name="city_search_last_search_label">Your Last Search</string>
    <string name="city_search_flight_search_label">Search City or Airport</string>
    <string name="city_search_flight_popular_label">Popular City or Popular Airport</string>
</resources>