<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".TourCreate">

    <include
        android:id="@+id/toolbar_tourCreatePackages"
        layout="@layout/toolbar_elevation"/>

    <!--<androidx.appcompat.widget.Toolbar-->
    <!--android:id="@+id/toolbar_tourCreatePackages"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--</androidx.appcompat.widget.Toolbar>-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_tourCreatePackages"
        app:layout_constraintBottom_toTopOf="@id/submit_saveChanges_tourCreate">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RV_tourCreatePackages_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/name_label"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/name_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/start_date_label"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/start_date_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:id="@+id/start_date"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/end_date_label"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/end_date_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:id="@+id/end_date"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/description_label"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/description_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@android:color/white">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tripDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="4"
                        android:maxLines="10"
                        android:gravity="top|left"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/location_label"/>

                <!--<android.support.v7.widget.AppCompatSpinner-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="56dp"-->
                <!--android:layout_marginRight="16dp"-->
                <!--android:layout_marginLeft="16dp"-->
                <!--style="@style/SpinnerTheme"-->
                <!--android:spinnerMode="dialog"-->
                <!--android:prompt="@string/location_prompt"-->
                <!--android:entries="@array/location_array">-->
                <!--</android.support.v7.widget.AppCompatSpinner>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/location_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:id="@+id/location"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/keyword_label"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/keyword_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:id="@+id/keyword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/tour_create_add_keyword_label"/>
                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/keyword_chip_layout"></com.google.android.material.chip.ChipGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/facilities_label"/>
                <GridView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:numColumns="2"
                    android:id="@+id/grid" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/tour_create_create_tour_label"
                    android:id="@+id/create_tour_pack"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@drawable/shadow_uptodown"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/tour_create_list_package_label"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data_label"
                    android:visibility="visible"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/no_data"
                    android:gravity="center"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RV_tourCreatePackages_2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:nestedScrollingEnabled="true"
                    android:scrollbars="none">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_tourCreatePackages"
        android:background="@drawable/shadow_uptodown"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_saveChanges_tourCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:text="@string/save_label"
        app:cornerRadius="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>